--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -161,3 +161,9 @@ body {
     width: 700px;
   }
 }
+
+linear-gradient(-45deg, #69c8e7 0%, #49d3b4 100%);
+
+url(images/Logo.png);
+
+url(images/Browser.png);
